--- a/index.html
+++ b/index.html
@@ -239,22 +239,20 @@
                 <div class="col-md-6">
                     <h2 class="section-title fw-bold h1">Technical Skills & Expertise</h2>
                     <ul>
-                        <li><strong>Frontend Development:</strong> JavaScript, Vue.js, Inertia.js, jQuery, Ajax, HTML,
-                            CSS, Tailwind CSS</li>
-                        <li><strong>Backend Development:</strong> PHP, Laravel, CodeIgniter</li>
-                        <li><strong>Database Management:</strong> MySQL, MsSQL, MongoDB, XAMPP, Laragon, CPanel</li>
-                        <li><strong>API Development & Integration:</strong> RESTful APIs, Third-Party APIs</li>
-                        <li><strong>Cache & Performance Optimization:</strong> Redis</li>
-                        <li><strong>Cloud Services:</strong> AWS (EC2, RDS, S3, EBS, Route 53, Lambda)</li>
-                        <li><strong>CMS & E-Commerce:</strong> WordPress, WooCommerce, Shopify, Custom Plugin
-                            Development, Drupal, October CMS</li>
-                        <li><strong>Deployment & DevOps:</strong> Server Management, CI/CD (GitHub Actions), Application
-                            Deployment</li>
-                        <li><strong>Architecture:</strong> MVC (Model-View-Controller)</li>
-                        <li><strong>Design Patterns:</strong> Repository Pattern, Service Pattern, Action Pattern</li>
-                        <li><strong>Programming Paradigms:</strong> Object-Oriented Programming (OOP)</li>
-                        <li><strong>Testing Methodologies:</strong> Test-Driven Development (TDD) with PHPUnit</li>
-                        <li><strong>System Monitoring & Logging:</strong> Laravel Telescope, Graylog</li>
+                       <li><strong>Frontend Development:</strong> JavaScript, TypeScript, Dart, React.js, React Native, Vue.js, Inertia.js, jQuery, Ajax, HTML5, CSS3, Tailwind CSS, Bootstrap</li>
+                            <li><strong>Backend Development:</strong> PHP, Laravel, CodeIgniter, Node.js</li>
+                            <li><strong>Database Management:</strong> MySQL, MsSQL, MongoDB, XAMPP, Laragon, CPanel; Database design and architecture</li>
+                            <li><strong>API Development & Integration:</strong> RESTful APIs, GraphQL APIs, Third-Party API Integrations</li>
+                            <li><strong>Cache & Performance Optimization:</strong> Redis</li>
+                            <li><strong>Cloud Services:</strong> AWS (EC2, ECS, S3, Lambda, RDS, DynamoDB, API)</li>
+                            <li><strong>CMS & E-Commerce:</strong> WordPress, WooCommerce, Shopify, Custom Plugin Development, Drupal, October CMS, Headless CMS platforms</li>
+                            <li><strong>Deployment & DevOps:</strong> Server Management, CI/CD pipelines (e.g., GitHub Actions), Application Deployment</li>
+                            <li><strong>Architecture & Patterns:</strong> MVC (Model-View-Controller), Microservices, Serverless Framework, Repository Pattern, Service Pattern, Action Pattern</li>
+                            <li><strong>Programming Paradigms:</strong> Object-Oriented Programming (OOP)</li>
+                            <li><strong>Testing Methodologies:</strong> Test-Driven Development (TDD) with PHPUnit, Jest; Unit and Integration Testing</li>
+                            <li><strong>System Monitoring & Logging:</strong> Laravel Telescope, Graylog</li>
+                            <li><strong>Agile & Team Experience:</strong> Experience working in Agile teams, preferably in agency or consultancy settings</li>
+                        
                     </ul>
 
                 </div>
