--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
                             class="h5 text-decoration-none text-black text-center">UneekMan</a>
                         <div class="d-flex align-items-center justify-content-center">
                             <img src="https://www.uneekman.com/assets/uneekman-logo-DLwiQfz5.png"
-                                class="center-block img p-3" alt="" width="150px">
+                                class="center-block img p-3 bg-black" alt="" width="150px">
                         </div>
                     </div>
                     <div class="card shadow border p-3 mx-3 text-center hover-effect">
@@ -495,7 +495,7 @@
                             class="h5 text-decoration-none text-black text-center">ApkaMD</a>
                         <div class="d-flex align-items-center justify-content-center">
                             <img src="https://ehr-dev.apkamd.com/media/logos/apka-branding-2.png"
-                                class="center-block img p-3" alt="" width="150px">
+                                class="center-block img p-3 bg-black" alt="" width="150px">
                         </div>
                     </div>
                     <div class="card shadow border p-3 mx-3 text-center hover-effect">
@@ -503,7 +503,7 @@
                             class="h5 text-decoration-none text-black text-center">Emarneek</a>
                         <div class="d-flex align-items-center justify-content-center">
                             <img src="	https://www.emarneek.com/assets/emarneek-logo-6HZ5RQ3Q.png"
-                                class="center-block img p-3" alt="" width="150px">
+                                class="center-block img p-3 bg-black" alt="" width="150px">
                         </div>
                     </div>
                     <div class="card shadow border p-3 mx-3 text-center hover-effect">
@@ -607,7 +607,7 @@
                         <a href="https://Preview.ph" target="_blank"
                             class="h5 text-decoration-none text-black text-center">Preview</a>
                         <div class="d-flex align-items-center justify-content-center">
-                            <img src="https://static.wikia.nocookie.net/logopedia/images/3/35/Preview2008.png/revision/latest?cb=20171125113125"
+                            <img src="	https://w7.pngwing.com/pngs/374/238/png-transparen…daniel-padilla-others-miscellaneous-text-logo.png"
                                 class="center-block img p-3" alt="Preview Logo" width="200px">
                         </div>
                     </div>
