--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
 
         <!-- Experience Section -->
         <section id="experience" class="my-5 bg-dark container-fluid">
-            <div class="container py-5">
+            <div class="container-fluid py-5">
                 <h2 class="section-title mb-4 text-center text-white  fw-bold h1 ">Work Experience</h2>
                 <div class="row row-cols-1 row-cols-md-4 g-4">
 
